RESOLVED FIXED312551
LibWebRTCCodecs webrtc encoder may fail encoding if a frame is submitted before its connection is initialized
https://bugs.webkit.org/show_bug.cgi?id=312551
Summary LibWebRTCCodecs webrtc encoder may fail encoding if a frame is submitted befo...
youenn fablet
Reported 2026-04-17 00:25:00 PDT
LibWebRTCCodecs webrtc encoder may fail encoding if a frame is submitted before its connection is initialized
Attachments
youenn fablet
Comment 1 2026-04-17 00:26:36 PDT
youenn fablet
Comment 2 2026-04-17 05:04:54 PDT
EWS
Comment 3 2026-04-20 11:58:09 PDT
Committed 311603@main (e3f4c5f3c238): <https://commits.webkit.org/311603@main> Reviewed commits have been landed. Closing PR #62969 and removing active labels.
EWS
Comment 4 2026-04-28 16:31:15 PDT
Committed 305413.748@safari-7624-branch (6db63428e027): <https://commits.webkit.org/305413.748@safari-7624-branch> Reviewed commits have been landed. Closing PR #5011 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.