Source/WebKit/WebProcess/GPU/webrtc/LibWebRTCCodecs.h
@@ -195,6 +195,8 @@ public:
 
     WorkQueue& workQueue() const { return m_queue; }
 
+    void clearConnectionForTesting() { clearConnection(); }
+
 private:
     LibWebRTCCodecs();
     void ensureGPUProcessConnectionAndDispatchToThread(Function<void()>&&);
@@ -212,7 +214,9 @@ private:
     RetainPtr<CVPixelBufferRef> convertToBGRA(CVPixelBufferRef);
 
     // GPUProcessConnection::Client
-    void gpuProcessConnectionDidClose(GPUProcessConnection&);
+    void gpuProcessConnectionDidClose(GPUProcessConnection&) { clearConnection(); }
+
+    void clearConnection();
 
     IPC::Connection* encoderConnection(Encoder&) WTF_REQUIRES_LOCK(m_encodersConnectionLock);
     RefPtr<IPC::Connection> protectedEncoderConnection(Encoder&) WTF_REQUIRES_LOCK(m_encodersConnectionLock);
