Source/WebKit/WebProcess/Network/webrtc/LibWebRTCProvider.cpp
@@ -210,6 +210,13 @@ void LibWebRTCProvider::willCreatePeerConnectionFactory()
 #endif
 }
 
+void LibWebRTCProvider::clearCodecsConnectionForTesting()
+{
+#if PLATFORM(COCOA)
+    protect(WebProcess::singleton().libWebRTCCodecs())->clearConnectionForTesting();
+#endif
+}
+
 } // namespace WebKit
 
 #endif // USE(LIBWEBRTC)
