Source/WebKit/WebProcess/Network/webrtc/LibWebRTCProvider.h
@@ -72,6 +72,8 @@ public:
 private:
     bool isLibWebRTCProvider() const final { return true; }
 
+    void clearCodecsConnectionForTesting() final;
+
     std::unique_ptr<SuspendableSocketFactory> createSocketFactory(String&& /* userAgent */, WebCore::ScriptExecutionContextIdentifier, bool /* isFirstParty */, WebCore::RegistrableDomain&&) final;
 
     webrtc::scoped_refptr<webrtc::PeerConnectionInterface> createPeerConnection(WebCore::ScriptExecutionContextIdentifier, webrtc::PeerConnectionObserver&, webrtc::PacketSocketFactory*, webrtc::PeerConnectionInterface::RTCConfiguration&&) final;
